--- a/vercel.json
+++ b/vercel.json
@@ -4,20 +4,27 @@
     {
       "src": "index.js",
       "use": "@vercel/node"
+    },
+    {
+      "src": "public/**",
+      "use": "@vercel/static"
     }
   ],
   "routes": [
-    {
-      "src": "/",
-      "dest": "index.js"
-    },
     {
       "src": "/api/(.*)",
       "dest": "index.js"
     },
     {
-      "src": "/(.*)",
+      "src": "/",
       "dest": "index.js"
+    },
+    {
+      "src": "/(.+)",
+      "dest": "public/$1"
     }
-  ]
+  ],
+  "env": {
+    "NODE_ENV": "production"
+  }
 }
